# AgentON_2025

./: .cursorrules  .env-example  .env.example  .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  docker-compose.yml  env_setup.sh  nginx.conf  requirements-dev.txt
backend/: .env-example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.py  test_graph.py
backend/docs/: README.md
backend/output/: debate_config_4c6ffb4d-0ea1-42aa-be52-28ae5350aa89.json  debate_prompt_4c6ffb4d-0ea1-42aa-be52-28ae5350aa89.json
backend/src/: __init__.py  agent_example.py  ai_model.py  api.py  config.py  encryption.py  graph.py  graph_run.py  main.py  objects.py  tools.py
backend/src/debate/: agent_manager.py  const_personas.py  flow.py  models.py  prompts_models.py
backend/src/prompts/: commentator.md  commentator.py  context.md  context.py  context_v2.md  context_v2.py  coordinator.md  coordinator.py  moderator.py  opening.py  pm_agent.md  pm_agent.py  prompt_crafter.md  prompt_crafter.py  req.py  rpea.md  rpea.py  rpea_v2.py  simple_context_prompt.py  simple_coordinator_prompt.py  simple_prompt_crafter_prompt.py  simple_rpea_prompt.py
backend/tests/: conftest.py  test_ai_agent.py  test_basic.py  test_pdf.py  test_websocket.py
backend/tests_local/: test_ai_agent.py  test_graph.py  test_pdf.py  test_round.py
backend/workflows/: ci.yml
docs/: README.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
src/: __init__.py
workflows/: ci.yml
(+29 files in other folders)
